# SynthVAE

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIMIC_preproc.ipynb  README copy.md  README.md  Test_Runs.py  Test_Runs_SynthVAE2_ENV.py  Test_Runs_SynthVAE_ENV.py  VAE.py  example_input.csv  metrics.py  model_card.md  plot.py  pyproject.toml  requirements.txt  run.py  scratch_vae_expts.py  sdv_baselines.py  sdv_baselines_SynthVAE2.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
Heart_Use_Case/: Data Exploration.ipynb  Heart_Analysis.ipynb  Heart_Pre_Processing.ipynb
Heart_Use_Case/Heart_Data/: synthetic_heart_run_2.csv
Hyperparameter Tuning/: Hyperparameter Tuning MIMIC.py  Hyperparameter Tuning SUPPORT.py  MIMIC.ipynb  SUPPORT.ipynb
Hyperparameter_Tuning/: Hyperparameter Tuning SUPPORT.py  Hyperparameter_Tuning_MIMIC.py  Hyperparameter_Tuning_SUPPORT.py  MIMIC.ipynb  SUPPORT.ipynb
Investigations/: MIMIC Notebook.ipynb  MIMIC Runs SYNTHVAE.py  MIMIC Runs SYNTHVAE2.py  MIMIC Runs.py  MIMIC_Notebook.ipynb  MIMIC_Runs.py  SUPPORT Notebook.ipynb  SUPPORT Runs SYNTHVAE.py  SUPPORT Runs SYNTHVAE2.py  SUPPORT Runs.py  SUPPORT_Notebook.ipynb  SUPPORT_Runs.py  Variable VALUEUOM SynthVAE_GMM.html
Investigations/.ipynb_checkpoints/: MIMIC Notebook-checkpoint.ipynb  SUPPORT Notebook-checkpoint.ipynb
auxiliary/: MIMIC_preproc.ipynb
docs/: model_card.md
opacus/: per_sample_gradient_clip.py  privacy_engine.py
rdt/: __init__.py  hyper_transformer.py
(+117 files in other folders)
